assets/deployments/file-storage/file-storage-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-storage
spec:
  selector:
    app: file-storage
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
#  externalIPs:
#   - 10.10.9.248
status: {}
