assets/deployments/file-storage/file-storage-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: file-storage
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/request-modifier: "AddPrefix:/api/v1"
spec:
  rules:
  - host: --DNS_NAME--
    http:
      paths:

      - path: /files
        backend:
          serviceName: file-storage
          servicePort: 8000
